test/badBoolUpdateAssign.slq

def foo[n:!â„•](){
	xâ‚:=0:ğ”¹;
	y:=1:uint[n];
	xâ‚âŠ•=y; /// error
	xâ‚‚:=0:ğ”¹;
	xâ‚‚âŠ•=y; /// error
	xâ‚ƒ:=0:ğ”¹;
	xâ‚ƒ-=y; /// error
	xâ‚„:=0:ğ”¹;
	xâ‚„ sub=y; /// error
}

def bar[n:!â„•](){
	xâ‚:=0:!ğ”¹;
	y:=1:!uint[n];
	xâ‚âŠ•=y; /// error
	xâ‚‚:=0:ğ”¹;
	xâ‚‚âŠ•=y; /// error
	xâ‚ƒ:=0:ğ”¹;
	xâ‚ƒ-=y; /// error
	xâ‚„:=0:ğ”¹;
	xâ‚„ sub=y; /// error
}
